# cad-spatial-bench

./: .gitignore  LICENSE  README.md  pyproject.toml
src/cad_spatial_bench/: __init__.py  evaluate.py  generators.py  render.py  sample_dataset.py  synthetic_text.py  tasks.py
