[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cad-spatial-bench"
version = "0.1.0"
description = "MIT-licensed benchmark for parametric CAD and spatial reasoning tasks."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Caid" }
]
dependencies = [
    "build123d>=0.9.0",
]

[tool.setuptools.packages.find]
where = ["src"]
